# vpp-api-transport

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: run-on-push.yml
examples/: vpp-api-transport-test.rs
src/: lib.rs  macros.rs  reqrecv.rs  shmem_wrapper.h  vpp-api-transport-test.rs
src/afunix/: big_array.rs  mod.rs
src/shmem/: mod.rs
src/shmem/shmem_bindgen/: mod.rs
