[package]
name = "vpp-api-transport"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vpp_api_transport"
path = "src/lib.rs"

[[bin]]
name = "vpp-api-transport-test"
path = "src/vpp-api-transport-test.rs"

[dependencies]



[build-dependencies]
bindgen = "*"
